--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,24 @@
-version: '3.8'
+version: '3.9'
 
 services:
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+    container_name: backend
     ports:
       - "8000:8000"
     volumes:
-      - ./backend/data:/app/data
-    container_name: restaurant_backend
+      - ./backend:/app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+    container_name: frontend
     ports:
       - "8501:8501"
-    environment:
-      - API_BASE_URL=http://backend:8000
+    volumes:
+      - ./frontend:/app
     depends_on:
       - backend
-    container_name: restaurant_frontend
+    command: streamlit run streamlit_app.py --server.port=8501
