--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,13 @@
-FROM python:3.10-slim
+FROM python:3.11
 
-WORKDIR /app
+COPY requirements.txt Rebel_Assignment/requirements.txt
+WORKDIR /Rebel_Assignment
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
+COPY . /Rebel_Assignment/
 
-COPY . .
-
-# Expose Streamlit port
 EXPOSE 8501
 
-CMD ["streamlit", "run", "streamlit_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+ENTRYPOINT ["streamlit","run"]
+
+CMD ["streamlit_app.py"]
