--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,12 +2,10 @@ FROM python:3.10-slim
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install system dependencies
+# Install Chromium, ChromiumDriver, and dependencies
 RUN apt-get update && apt-get install -y \
-    wget \
-    unzip \
-    gnupg \
-    curl \
+    chromium \
+    chromium-driver \
     fonts-liberation \
     libappindicator3-1 \
     libasound2 \
@@ -23,29 +21,21 @@ RUN apt-get update && apt-get install -y \
     libxdamage1 \
     libxrandr2 \
     xdg-utils \
+    wget unzip curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Google Chrome (stable)
-RUN wget -q -O google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
-    apt install -y ./google-chrome.deb && \
-    rm google-chrome.deb
-
-# Install matching ChromeDriver
-RUN CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+') && \
-    DRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}") && \
-    wget -q "https://chromedriver.storage.googleapis.com/${DRIVER_VERSION}/chromedriver_linux64.zip" && \
-    unzip chromedriver_linux64.zip && \
-    mv chromedriver /usr/bin/chromedriver && \
-    chmod +x /usr/bin/chromedriver && \
-    rm chromedriver_linux64.zip
-
-ENV CHROME_BIN=/usr/bin/google-chrome
+# Set environment variables for Chromium and driver paths
+ENV CHROME_BIN=/usr/bin/chromium
 ENV CHROMEDRIVER_PATH=/usr/bin/chromedriver
 
+# Copy requirements and install Python dependencies
 COPY requirements.txt Rebel_Assignment/requirements.txt
 WORKDIR /Rebel_Assignment
 RUN pip install --upgrade pip && pip install -r requirements.txt
+
+# Copy your app code
 COPY . /Rebel_Assignment
 
 EXPOSE 8000
+
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
